components/poddefaults-webhooks/manifests/kustomize/components/istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poddefaults-webhook-deployment
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "false"
