components/poddefaults-webhooks/manifests/kustomize/components/istio/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: poddefaults
  labels: {}
spec:
  podSelector:
    matchLabels:
      app: poddefaults
      app.kubernetes.io/component: poddefaults
  ingress:
    - ports:
        - protocol: TCP
          port: 4443
  policyTypes:
    - Ingress
